# -

./: README.md
Android/: .gitignore  settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  biquad.h  biquad_coeffs.h  constants.h  dsp.h  fft.h  native-lib.cpp
Android/gradle/wrapper/: gradle-wrapper.properties
PC/: .gitignore  AGENTS.md  CLAUDE.md  RECORD.md  export_model.py  export_onnx.py  gen_confusion_matrix.py  gen_constants.py  merge_spectrograms.py  predict.py  process_pcm.py  sigongge.py  train_cnn.py
PC/.claude/: settings.local.json
PC/CNN-V2/: cnn_v2.py  export_onnx_v2.py
PC/dataset/Fist_bump/npy/: Fist_bump_001_envelope.npy  Fist_bump_001_spectrogram.npy  Fist_bump_002_envelope.npy  Fist_bump_002_spectrogram.npy  Fist_bump_003_envelope.npy  Fist_bump_003_spectrogram.npy  Fist_bump_004_envelope.npy  Fist_bump_004_spectrogram.npy  Fist_bump_005_envelope.npy  Fist_bump_005_spectrogram.npy  Fist_bump_006_envelope.npy  Fist_bump_006_spectrogram.npy  Fist_bump_007_envelope.npy  Fist_bump_007_spectrogram.npy  Fist_bump_008_envelope.npy  Fist_bump_008_spectrogram.npy  Fist_bump_009_envelope.npy  Fist_bump_009_spectrogram.npy  Fist_bump_010_envelope.npy  Fist_bump_010_spectrogram.npy  Fist_bump_011_envelope.npy  Fist_bump_011_spectrogram.npy  Fist_bump_012_envelope.npy  Fist_bump_012_spectrogram.npy  Fist_bump_013_envelope.npy  Fist_bump_013_spectrogram.npy  Fist_bump_014_envelope.npy  Fist_bump_014_spectrogram.npy  (+72 more)
PC/dataset/Push/: summary.json
(+514 files in other folders)
